--- a/status.html
+++ b/status.html
@@ -1,158 +1,404 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <title>وضعیت سرور</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
+<meta charset="UTF-8" />
+<title>پنل کاربری و وضعیت سرورها</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<style>
+  @font-face {
+    font-family: 'Minecraftia';
+    src: url('https://cdn.jsdelivr.net/gh/asteroidmax/minecraftia/Minecraftia.ttf') format('truetype');
+  }
 
-    body {
-      margin: 0;
-      font-family: 'Vazirmatn', sans-serif;
-      background-image: url('https://wallpapercave.com/wp/wp2757874.jpg');
-      background-size: cover;
-      background-position: center;
-      direction: rtl;
-      color: white;
-      text-align: center;
-    }
+  body {
+    margin: 0;
+    padding: 20px;
+    background-color: #000000;
+    font-family: 'Minecraftia', sans-serif;
+    color: #fff;
+    direction: rtl;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+  }
 
-    .server-box {
-      background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-                  url('https://media.forgecdn.net/attachments/825/970/ctb_3.jpg') no-repeat center center;
-      background-size: cover;
-      border: 2px solid #00ffff;
-      box-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
-      max-width: 400px;
-      margin: 100px auto 20px;
-      padding: 30px 20px;
-      border-radius: 20px;
-      position: relative;
-    }
+  .hidden {
+    display: none !important;
+  }
 
-    .wifi-icon {
-      width: 60px;
-      height: 60px;
-      position: absolute;
-      top: -30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #121212;
-      padding: 5px;
-      border-radius: 50%;
-      border: 2px solid red;
-      box-shadow: 0 0 10px red;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all 0.4s ease;
-    }
+  /* عنوان نئونی */
+  .neon-title {
+    font-size: 48px;
+    animation: rgbNeon 6s linear infinite;
+    text-shadow: 0 0 4px #0f0, 0 0 8px #0f0, 0 0 12px #0f0;
+    margin-bottom: 20px;
+  }
+  @keyframes rgbNeon {
+    0% { color: #00ff00; }
+    33% { color: #00ffff; }
+    66% { color: #ff00ff; }
+    100% { color: #00ff00; }
+  }
 
-    .wifi-icon img {
-      width: 32px;
-      height: 32px;
-      transition: transform 0.4s ease;
-    }
+  /* دکمه سرورها */
+  #serversToggleBtn {
+    font-size: 20px;
+    padding: 12px 36px;
+    background: linear-gradient(45deg, #556655, #99cc88, #556655);
+    background-size: 200% 200%;
+    animation: grayGreenShift 5s ease infinite;
+    color: #aaddaa;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 8px #556655, 0 0 18px #99cc88;
+    cursor: pointer;
+    user-select: none;
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+  }
+  #serversToggleBtn:hover {
+    transform: scale(1.05);
+  }
 
-    .connecting {
-      border-color: #00ff66 !important;
-      box-shadow: 0 0 15px #00ff66 !important;
-      animation: spin 1.2s linear infinite;
-    }
+  #arrow {
+    margin-right: 8px;
+    transition: transform 0.3s;
+  }
 
-    @keyframes spin {
-      0% { transform: translateX(-50%) rotate(0deg); }
-      100% { transform: translateX(-50%) rotate(360deg); }
-    }
+  .server-select-container {
+    overflow: hidden;
+    background: linear-gradient(90deg, #0f0c29, #302b63, #24243e);
+    width: 220px;
+    padding: 10px;
+    border-radius: 12px;
+    border: 2px solid;
+    animation: neonBorder 8s linear infinite;
+    box-shadow: 0 0 8px #0f0, 0 0 16px #0f0;
+    margin-bottom: 15px;
+  }
 
-    .connecting img {
-      transform: scale(1.5);
-    }
+  @keyframes neonBorder {
+    0% { border-color: #00ff00; }
+    25% { border-color: #00ffaa; }
+    50% { border-color: #55ff55; }
+    75% { border-color: #00ff00; }
+    100% { border-color: #00ffaa; }
+  }
 
-    .server-box h2 {
-      font-size: 24px;
-      margin-top: 40px;
-      transition: color 0.3s ease;
-    }
+  label {
+    display: block;
+    padding: 6px 10px;
+    font-size: 16px;
+    background: rgba(0,255,0,0.1);
+    margin-bottom: 10px;
+    border-radius: 6px;
+    cursor: pointer;
+    user-select: none;
+  }
 
-    .status-default {
-      color: white;
-    }
+  input[type=radio] { display: none; }
 
-    .status-connecting {
-      color: #63e68a;
-      text-shadow: 0 0 10px #63e68a;
-    }
+  input:checked + label {
+    background: #00ff00;
+    color: #000;
+    box-shadow: 0 0 8px #0f0, 0 0 12px #0f0;
+    font-weight: bold;
+  }
 
-    .status-offline {
-      color: #ff4444;
-    }
+  .message-box {
+    font-size: 18px;
+    min-height: 30px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-weight: bold;
+  }
 
-    .alert {
-      margin-top: 25px;
-      font-size: 16px;
-      color: #ffaaaa;
-    }
+  .msg-green {
+    color: #00ff00;
+    text-shadow: 0 0 6px #0f0;
+  }
 
-    .connect-btn {
-      margin-top: 30px;
-      padding: 12px 25px;
-      font-size: 18px;
-      background-color: #2196f3;
-      border: none;
-      border-radius: 10px;
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
+  .msg-red {
+    color: #ff3333;
+    text-shadow: 0 0 6px #f33;
+  }
 
-    .connect-btn:hover {
-      background-color: #1976d2;
-    }
+  .msg-orange {
+    color: #ffa500;
+    text-shadow: 0 0 6px #fa0;
+  }
 
-    .message-box {
-      margin-top: 20px;
-      font-size: 14px;
-      color: #63e68a;
-      display: none;
-    }
-  </style>
+  .confirm-btn {
+    font-size: 18px;
+    padding: 10px 40px;
+    background: linear-gradient(45deg,#556655,#99cc88,#1a9988);
+    background-size: 300% 300%;
+    animation: rgbBlueGreenShift 6s ease infinite;
+    color: #ccddee;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 8px #556655, 0 0 18px #1a9988, 0 0 28px #4ea;
+    cursor: pointer;
+    user-select: none;
+  }
+  .confirm-btn:hover {
+    transform: scale(1.05);
+  }
+
+  @keyframes grayGreenShift {
+    0%,100% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+  }
+
+  @keyframes rgbBlueGreenShift {
+    0%,100% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+  }
+
+  /* پنل کاربری نئونی */
+  #openPanelBtn {
+    padding: 8px 16px;
+    font-size: 15px;
+    border-radius: 25px;
+    border: none;
+    cursor: pointer;
+    background: linear-gradient(45deg, #0ff, #f0f);
+    color: white;
+    box-shadow: 0 0 6px #0ff, 0 0 12px #f0f;
+    margin-bottom: 20px;
+    transition: box-shadow 0.3s ease;
+  }
+  #openPanelBtn:hover {
+    box-shadow: 0 0 12px #0ff, 0 0 24px #f0f;
+  }
+  #userPanel {
+    display: none;
+    background: linear-gradient(145deg, #121212, #1a1a1a);
+    border-radius: 20px;
+    width: 360px;
+    box-shadow: 0 0 12px #0ff, 0 0 30px #f0f, inset 0 0 20px #222;
+    padding: 30px 30px 40px;
+    margin-top: 30px;
+    color: #ccc;
+    position: relative;
+  }
+  #userPanel h2 {
+    font-size: 28px;
+    color: #0ff;
+    margin-top: 0;
+    margin-bottom: 25px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-align: center;
+    text-shadow: 0 0 10px #0ff;
+  }
+  .info-row {
+    background: #222;
+    margin-bottom: 18px;
+    border-radius: 12px;
+    padding: 14px 18px;
+    box-shadow: 0 0 5px #0ff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 17px;
+    font-weight: 600;
+    color: #aaffff;
+    text-shadow: 0 0 6px #0ff;
+  }
+  .info-row .label {
+    opacity: 0.7;
+    font-weight: 400;
+    color: #88eeff;
+  }
+  #closePanelBtn {
+    position: absolute;
+    top: 15px;
+    left: 20px;
+    font-size: 26px;
+    color: #f0f;
+    cursor: pointer;
+    user-select: none;
+    font-weight: bold;
+    transition: color 0.3s ease;
+    text-shadow: 0 0 8px #f0f;
+  }
+  #closePanelBtn:hover {
+    color: #0ff;
+    text-shadow: 0 0 12px #0ff;
+  }
+  /* دایره درصد */
+  .progress-circle {
+    position: relative;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background: conic-gradient(#0ff 360deg, #222 0deg);
+    box-shadow: 0 0 6px #0ff inset;
+    margin-left: 12px;
+    flex-shrink: 0;
+    transition: background 0.3s ease;
+  }
+  .progress-circle span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #0ff;
+    font-size: 14px;
+    font-weight: 700;
+    user-select: none;
+    text-shadow: 0 0 4px #0ff;
+  }
+</style>
 </head>
 <body>
 
-  <div class="server-box">
-    <div class="wifi-icon" id="wifiIcon">
-      <img src="https://cdn-icons-png.flaticon.com/512/8603/8603448.png" alt="قطع اتصال">
+  <div class="neon-title">Quick Match</div>
+
+  <button id="openPanelBtn" aria-expanded="false" aria-controls="userPanel">پنل کاربری</button>
+
+  <div id="userPanel" role="region" aria-labelledby="panelTitle">
+    <h2 id="panelTitle">پنل کاربری شما</h2>
+    <div class="info-row"><span class="label">رنک:</span><span>فعال نشده!</span></div>
+    <div class="info-row">
+      <span class="label">مدت بازی در سرور:</span>
+      <div style="display:flex; align-items:center;">
+        <div class="progress-circle"><span id="progressPercent">100%</span></div>
+        <span id="playtimeText">0 ساعت</span>
+      </div>
     </div>
-
-    <h2 id="statusTitle" class="status-default">کلیک کنید</h2>
-    <p class="alert">⛔ برای اتصال به ادمین پیام بدهید</p>
-
-    <button class="connect-btn" onclick="startConnection()">اتصال</button>
-    <div id="message" class="message-box">در حال بررسی وضعیت سرور...</div>
+    <div class="info-row"><span class="label">اشتراک:</span><span>بدون اشتراک</span></div>
+    <div id="closePanelBtn" role="button" tabindex="0" aria-label="بستن پنل">&times;</div>
   </div>
 
-  <script>
-    function startConnection() {
-      const icon = document.getElementById('wifiIcon');
-      const title = document.getElementById('statusTitle');
-      const message = document.getElementById('message');
+  <button id="serversToggleBtn">
+    <span id="arrow">▼</span>
+    سرورها
+  </button>
 
-      icon.classList.add('connecting');
-      title.textContent = 'در حال اتصال...';
-      title.className = 'status-connecting';
-      message.style.display = 'block';
-      message.textContent = 'لطفاً منتظر بمانید...';
+  <div class="server-select-container hidden" id="serverSelectContainer">
+    <input type="radio" id="server1" name="server" value="server1">
+    <label for="server1">سرور 1</label>
+    <input type="radio" id="server2" name="server" value="server2">
+    <label for="server2">سرور 2</label>
+    <input type="radio" id="server3" name="server" value="server3">
+    <label for="server3">سرور 3</label>
+  </div>
 
-      setTimeout(() => {
-        icon.classList.remove('connecting');
-        title.textContent = 'سرور آفلاین است!';
-        title.className = 'status-offline';
-        message.textContent = '⛔ اتصال ممکن نیست. سرور در حال حاضر آفلاین است.';
-      }, 3000);
+  <div class="message-box" id="messageBox"></div>
+
+  <button class="confirm-btn" id="confirmBtn">تأیید</button>
+
+<script>
+  // پنل کاربری باز و بسته شدن
+  const openBtn = document.getElementById('openPanelBtn');
+  const userPanel = document.getElementById('userPanel');
+  const closeBtn = document.getElementById('closePanelBtn');
+  const progressCircle = userPanel.querySelector('.progress-circle');
+  const progressPercent = document.getElementById('progressPercent');
+
+  function animateProgress(from, to, duration) {
+    let start = null;
+    function step(timestamp) {
+      if (!start) start = timestamp;
+      const progress = timestamp - start;
+      const percent = Math.max(to, from - (from - to) * (progress / duration));
+      const degrees = (percent / 100) * 360;
+      progressCircle.style.background = `conic-gradient(#0ff 0deg, #0ff ${degrees}deg, #222 ${degrees}deg 360deg)`;
+      progressPercent.textContent = `${Math.round(percent)}%`;
+      if (progress < duration) {
+        window.requestAnimationFrame(step);
+      } else {
+        progressCircle.style.background = `conic-gradient(#0ff 0deg, #0ff ${to*3.6}deg, #222 ${to*3.6}deg 360deg)`;
+        progressPercent.textContent = `${to}%`;
+      }
     }
-  </script>
+    window.requestAnimationFrame(step);
+  }
+
+  openBtn.addEventListener('click', () => {
+    userPanel.style.display = 'block';
+    openBtn.setAttribute('aria-expanded', 'true');
+    animateProgress(100, 0, 1000);
+  });
+
+  closeBtn.addEventListener('click', () => {
+    userPanel.style.display = 'none';
+    openBtn.setAttribute('aria-expanded', 'false');
+    progressCircle.style.background = `conic-gradient(#0ff 0deg, #0ff 360deg, #222 360deg 360deg)`;
+    progressPercent.textContent = '100%';
+  });
+
+  closeBtn.addEventListener('keydown', e => {
+    if (e.key === 'Enter' || e.key === ' ') {
+      userPanel.style.display = 'none';
+      openBtn.setAttribute('aria-expanded', 'false');
+      closeBtn.blur();
+      progressCircle.style.background = `conic-gradient(#0ff 0deg, #0ff 360deg, #222 360deg 360deg)`;
+      progressPercent.textContent = '100%';
+    }
+  });
+
+  // عملکرد دکمه سرورها و نمایش پیام‌ها
+  const serversToggleBtn = document.getElementById('serversToggleBtn');
+  const arrow = document.getElementById('arrow');
+  const sel = document.getElementById('serverSelectContainer');
+  const msg = document.getElementById('messageBox');
+  const btn = document.getElementById('confirmBtn');
+
+  serversToggleBtn.addEventListener('click', () => {
+    const isOpen = !sel.classList.contains('hidden');
+    if (isOpen) {
+      sel.classList.add('hidden');
+      arrow.style.transform = 'rotate(0deg)';
+      msg.textContent = '';
+    } else {
+      sel.classList.remove('hidden');
+      arrow.style.transform = 'rotate(180deg)';
+    }
+  });
+
+  btn.addEventListener('click', () => {
+    const s = document.querySelector('input[name="server"]:checked');
+    if (!s) {
+      alert('لطفاً یک سرور انتخاب کنید!');
+      return;
+    }
+    clearTimeout(window.connTimer);
+    clearInterval(window.connInterval);
+
+    if (s.value === 'server1') {
+      msg.textContent = 'سرور درحال اتصال است...';
+      msg.className = 'message-box msg-green';
+      window.connTimer = setTimeout(() => {
+        msg.textContent = '⛔ اتصال ممکن نیست. سرور در حال حاضر آفلاین است.';
+        msg.className = 'message-box msg-red';
+      }, 6000);
+
+    } else if (s.value === 'server2') {
+      msg.textContent = 'سرور در حال اتصال است...';
+      msg.className = 'message-box msg-green';
+      let t = 0;
+      window.connInterval = setInterval(() => {
+        t += 1000;
+        if (t >= 100000) {
+          clearInterval(window.connInterval);
+          msg.textContent = '⛔ اتصال ممکن نیست. سرور در حال حاضر آفلاین است.';
+          msg.className = 'message-box msg-red';
+        }
+      }, 1000);
+
+    } else if (s.value === 'server3') {
+      msg.textContent = 'سرور از دسترس خارج شده است!';
+      msg.className = 'message-box msg-orange';
+    }
+  });
+</script>
 
 </body>
 </html>
