--- a/status.html
+++ b/status.html
@@ -1,398 +1,260 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-<meta charset="UTF-8" />
-<title>صفحه سرورها</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<style>
-  /* فونت و تنظیمات اولیه */
-  @font-face {
-    font-family: 'Minecraftia';
-    src: url('https://cdn.jsdelivr.net/gh/asteroidmax/minecraftia/Minecraftia.ttf') format('truetype');
-  }
+  <meta charset="UTF-8" />
+  <title>صفحه سرورها و وضعیت</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
 
-  body {
-    margin: 0;
-    padding: 20px;
-    background: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/273126115942507.6067070353764.gif') no-repeat center center fixed;
-    background-size: cover;
-    font-family: 'Minecraftia', sans-serif;
-    color: #fff;
-    direction: rtl;
-    min-height: 100vh;
-    overflow-x: hidden;
-    position: relative;
-  }
+    body {
+      margin: 0;
+      font-family: 'Vazirmatn', sans-serif;
+      background: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/273126115942507.6067070353764.gif') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+      direction: rtl;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+      padding: 20px;
+      box-sizing: border-box;
+    }
 
-  /* --- دکمه باز کردن پنل کاربری --- */
-  #openPanelBtn {
-    position: fixed;
-    top: 20px; /* کمی پایین تر از بالا */
-    right: 30px; /* کمی از گوشه فاصله */
-    padding: 10px 20px;
-    font-size: 15px;
-    border-radius: 25px;
-    border: none;
-    cursor: pointer;
-    background: linear-gradient(45deg, #0ff, #f0f);
-    color: white;
-    box-shadow: 0 0 10px #0ff, 0 0 20px #f0f;
-    z-index: 9999;
-    user-select: none;
-    transition: box-shadow 0.3s ease;
-  }
+    /* بخش سرورها */
+    .server-selection {
+      background: rgba(0, 0, 0, 0.65);
+      border-radius: 15px;
+      padding: 25px 35px;
+      max-width: 280px;
+      width: 100%;
+      box-shadow: 0 0 15px #00ffff;
+      border: 2px solid #00ffff;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      user-select: none;
+    }
 
-  #openPanelBtn:hover {
-    box-shadow: 0 0 20px #0ff, 0 0 40px #f0f;
-  }
+    .server-selection h3 {
+      margin: 0 0 10px 0;
+      text-align: center;
+      font-size: 22px;
+      color: #00ffff;
+      text-shadow: 0 0 8px #00ffff;
+    }
 
-  /* --- استایل بخش اول: انتخاب سرورها --- */
-  #serversToggleBtn {
-    font-size: 20px;
-    padding: 12px 36px;
-    background: linear-gradient(45deg, #556655, #99cc88, #556655);
-    background-size: 200% 200%;
-    animation: grayGreenShift 5s ease infinite;
-    color: #aaddaa;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 0 8px #556655, 0 0 18px #99cc88;
-    cursor: pointer;
-    user-select: none;
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
-  }
+    label {
+      display: block;
+      font-size: 18px;
+      padding: 10px 12px;
+      background: rgba(0, 255, 255, 0.15);
+      border-radius: 8px;
+      cursor: pointer;
+      margin-bottom: 8px;
+      transition: background-color 0.3s;
+    }
+    label:hover {
+      background: rgba(0, 255, 255, 0.3);
+    }
 
-  #serversToggleBtn:hover {
-    transform: scale(1.05);
-  }
+    input[type="radio"] {
+      display: none;
+    }
 
-  #arrow {
-    margin-right: 8px;
-    transition: transform 0.3s;
-  }
+    input[type="radio"]:checked + label {
+      background: #00ffff;
+      color: #000;
+      font-weight: 700;
+      box-shadow: 0 0 10px #0ff;
+    }
 
-  .server-select-container {
-    overflow: hidden;
-    background: linear-gradient(90deg, #0f0c29, #302b63, #24243e);
-    width: 220px;
-    padding: 10px;
-    border-radius: 12px;
-    border: 2px solid;
-    animation: neonBorder 8s linear infinite;
-    box-shadow: 0 0 8px #0f0, 0 0 16px #0f0;
-    margin-bottom: 15px;
-  }
+    .confirm-btn {
+      margin-top: 15px;
+      padding: 12px;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      background: linear-gradient(45deg, #00ffff, #007777);
+      color: #000;
+      cursor: pointer;
+      box-shadow: 0 0 10px #00ffff;
+      transition: background 0.3s;
+    }
+    .confirm-btn:hover {
+      background: linear-gradient(45deg, #33ffff, #009999);
+    }
 
-  @keyframes neonBorder {
-    0% { border-color: #00ff00; }
-    25% { border-color: #00ffaa; }
-    50% { border-color: #55ff55; }
-    75% { border-color: #00ff00; }
-    100% { border-color: #00ffaa; }
-  }
+    /* بخش وضعیت سرور */
+    .server-box {
+      background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+                  url('https://media.forgecdn.net/attachments/825/970/ctb_3.jpg') no-repeat center center;
+      background-size: cover;
+      border: 2px solid #00ffff;
+      box-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
+      max-width: 400px;
+      width: 100%;
+      padding: 30px 20px;
+      border-radius: 20px;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-  label {
-    display: block;
-    padding: 6px 10px;
-    font-size: 16px;
-    background: rgba(0,255,0,0.1);
-    margin-bottom: 10px;
-    border-radius: 6px;
-    cursor: pointer;
-    user-select: none;
-  }
+    .wifi-icon {
+      width: 60px;
+      height: 60px;
+      position: absolute;
+      top: -30px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #121212;
+      padding: 5px;
+      border-radius: 50%;
+      border: 2px solid red;
+      box-shadow: 0 0 10px red;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.4s ease;
+    }
 
-  input[type=radio] { display: none; }
+    .wifi-icon img {
+      width: 32px;
+      height: 32px;
+      transition: transform 0.4s ease;
+    }
 
-  input:checked + label {
-    background: #00ff00;
-    color: #000;
-    box-shadow: 0 0 8px #0f0, 0 0 12px #0f0;
-    font-weight: bold;
-  }
+    .connecting {
+      border-color: #00ff66 !important;
+      box-shadow: 0 0 15px #00ff66 !important;
+      animation: spin 1.2s linear infinite;
+    }
 
-  .message-box {
-    font-size: 18px;
-    min-height: 30px;
-    margin-bottom: 10px;
-    text-align: center;
-    font-weight: bold;
-  }
+    @keyframes spin {
+      0% { transform: translateX(-50%) rotate(0deg); }
+      100% { transform: translateX(-50%) rotate(360deg); }
+    }
 
-  .msg-green {
-    color: #00ff00;
-    text-shadow: 0 0 6px #0f0;
-  }
+    .connecting img {
+      transform: scale(1.5);
+    }
 
-  .msg-red {
-    color: #ff3333;
-    text-shadow: 0 0 6px #f33;
-  }
+    .server-box h2 {
+      font-size: 24px;
+      margin-top: 40px;
+      transition: color 0.3s ease;
+    }
 
-  .msg-orange {
-    color: #ffa500;
-    text-shadow: 0 0 6px #fa0;
-  }
+    .status-default {
+      color: white;
+    }
 
-  .confirm-btn {
-    font-size: 18px;
-    padding: 10px 40px;
-    background: linear-gradient(45deg,#556655,#99cc88,#1a9988);
-    background-size: 300% 300%;
-    animation: rgbBlueGreenShift 6s ease infinite;
-    color: #ccddee;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 0 8px #556655, 0 0 18px #1a9988, 0 0 28px #4ea;
-    cursor: pointer;
-    user-select: none;
-    margin-bottom: 40px;
-  }
+    .status-connecting {
+      color: #63e68a;
+      text-shadow: 0 0 10px #63e68a;
+    }
 
-  .confirm-btn:hover {
-    transform: scale(1.05);
-  }
+    .status-offline {
+      color: #ff4444;
+    }
 
-  @keyframes grayGreenShift {
-    0%,100% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-  }
+    .alert {
+      margin-top: 25px;
+      font-size: 16px;
+      color: #ffaaaa;
+      text-align: center;
+    }
 
-  @keyframes rgbBlueGreenShift {
-    0%,100% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-  }
+    .connect-btn {
+      margin-top: 30px;
+      padding: 12px 25px;
+      font-size: 18px;
+      background-color: #2196f3;
+      border: none;
+      border-radius: 10px;
+      color: white;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
 
-  .hidden {
-    display: none !important;
-  }
+    .connect-btn:hover {
+      background-color: #1976d2;
+    }
 
-  /* --- بخش دوم: وضعیت سرور (کد دوم شما) --- */
+    .message-box {
+      margin-top: 20px;
+      font-size: 14px;
+      color: #63e68a;
+      display: none;
+      text-align: center;
+    }
 
-  .server-box-2 {
-    background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-                url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIpbiNoYX5ei5NWDxQjgcjeuQZklLU5V9hXw&s') no-repeat center center;
-    background-size: cover;
-    border: 4px solid;
-    border-radius: 20px;
-    max-width: 400px;
-    margin: 40px auto 60px;
-    padding: 30px 20px;
-    position: relative;
-    animation: rgb-border 4s linear infinite;
-    color: white;
-    text-align: center;
-  }
-
-  @keyframes rgb-border {
-    0%   { border-color: #ff0000; box-shadow: 0 0 15px #ff0000; }
-    25%  { border-color: #00ff00; box-shadow: 0 0 15px #00ff00; }
-    50%  { border-color: #0000ff; box-shadow: 0 0 15px #0000ff; }
-    75%  { border-color: #ffff00; box-shadow: 0 0 15px #ffff00; }
-    100% { border-color: #ff0000; box-shadow: 0 0 15px #ff0000; }
-  }
-
-  .wifi-icon-2 {
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #121212;
-    padding: 5px;
-    border-radius: 50%;
-    border: 2px solid red;
-    box-shadow: 0 0 10px red;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.4s ease;
-  }
-
-  .wifi-icon-2 img {
-    width: 32px;
-    height: 32px;
-    transition: transform 0.4s ease;
-  }
-
-  .connecting-2 {
-    border-color: #00ff66 !important;
-    box-shadow: 0 0 15px #00ff66 !important;
-    animation: spin 1.2s linear infinite;
-  }
-
-  @keyframes spin {
-    0% { transform: translateX(-50%) rotate(0deg); }
-    100% { transform: translateX(-50%) rotate(360deg); }
-  }
-
-  .connecting-2 img {
-    transform: scale(1.5);
-  }
-
-  .server-box-2 h2 {
-    font-size: 24px;
-    margin-top: 40px;
-    transition: color 0.3s ease;
-  }
-
-  .status-default-2 {
-    color: white;
-  }
-
-  .status-connecting-2 {
-    color: #00ff66;
-    text-shadow: 0 0 10px #00ff66;
-  }
-
-  .status-offline-2 {
-    color: #ff4444;
-  }
-
-  .alert-2 {
-    margin-top: 25px;
-    font-size: 16px;
-    color: #ffaaaa;
-  }
-
-  .connect-btn-2 {
-    margin-top: 30px;
-    padding: 12px 25px;
-    font-size: 18px;
-    background-color: #2196f3;
-    border: none;
-    border-radius: 10px;
-    color: white;
-    cursor: pointer;
-    transition: background 0.3s;
-  }
-
-  .connect-btn-2:hover {
-    background-color: #1976d2;
-  }
-
-  .message-box-2 {
-    margin-top: 20px;
-    font-size: 14px;
-    color: #ffa;
-    display: none;
-  }
-
-</style>
+  </style>
 </head>
 <body>
 
-  <!-- دکمه باز کردن پنل کاربری -->
-  <button id="openPanelBtn" aria-expanded="false" aria-controls="userPanel">پنل کاربری</button>
+  <!-- بخش انتخاب سرورها -->
+  <section class="server-selection" aria-label="انتخاب سرورها">
+    <h3>انتخاب سرور</h3>
 
-  <!-- بخش اول: انتخاب سرورها -->
-  <button id="serversToggleBtn" aria-expanded="false" aria-controls="serverSelectContainer">
-    <span id="arrow">▼</span> سرورها
-  </button>
-
-  <div class="server-select-container hidden" id="serverSelectContainer" aria-label="انتخاب سرور">
     <input type="radio" id="server1" name="server" value="server1" />
     <label for="server1">سرور 1</label>
 
     <input type="radio" id="server2" name="server" value="server2" />
     <label for="server2">سرور 2</label>
 
-    <input type="radio" id="server3" name="server" value="server3" />
-    <label for="server3">سرور 3</label>
-  </div>
+    <button class="confirm-btn" id="confirmBtn">تأیید</button>
+  </section>
 
-  <div class="message-box" id="messageBox"></div>
-
-  <button class="confirm-btn" id="confirmBtn">تأیید</button>
-
-  <!-- بخش دوم: وضعیت سرور -->
-  <div class="server-box-2" role="region" aria-label="وضعیت سرور">
-    <div class="wifi-icon-2" id="wifiIcon">
+  <!-- بخش وضعیت سرور -->
+  <section class="server-box" aria-label="وضعیت سرور">
+    <div class="wifi-icon" id="wifiIcon">
       <img src="https://cdn-icons-png.flaticon.com/512/8603/8603448.png" alt="قطع اتصال" />
     </div>
 
-    <h2 id="statusTitle" class="status-default-2">کلیک کنید</h2>
-    <p class="alert-2">⛔ برای اتصال به ادمین پیام بدهید</p>
+    <h2 id="statusTitle" class="status-default">کلیک کنید</h2>
+    <p class="alert">⛔ برای اتصال به ادمین پیام بدهید</p>
 
-    <button class="connect-btn-2" onclick="startConnection()">اتصال</button>
-    <div id="message" class="message-box-2">در حال بررسی وضعیت سرور...</div>
-  </div>
+    <button class="connect-btn" onclick="startConnection()">اتصال</button>
+    <div id="message" class="message-box">در حال بررسی وضعیت سرور...</div>
+  </section>
 
 <script>
-  // باز/بسته کردن لیست سرورها
-  const serversToggleBtn = document.getElementById('serversToggleBtn');
-  const arrow = document.getElementById('arrow');
-  const sel = document.getElementById('serverSelectContainer');
-  const msg = document.getElementById('messageBox');
-  const btn = document.getElementById('confirmBtn');
+  // تایید انتخاب سرور
+  const confirmBtn = document.getElementById('confirmBtn');
+  const messageBox = document.getElementById('message');
 
-  serversToggleBtn.addEventListener('click', () => {
-    const isOpen = !sel.classList.contains('hidden');
-    if (isOpen) {
-      sel.classList.add('hidden');
-      arrow.style.transform = 'rotate(0deg)';
-      msg.textContent = '';
-    } else {
-      sel.classList.remove('hidden');
-      arrow.style.transform = 'rotate(180deg)';
-    }
-  });
-
-  btn.addEventListener('click', () => {
-    const s = document.querySelector('input[name="server"]:checked');
-    if (!s) {
+  confirmBtn.addEventListener('click', () => {
+    const selectedServer = document.querySelector('input[name="server"]:checked');
+    if (!selectedServer) {
       alert('لطفاً یک سرور انتخاب کنید!');
       return;
     }
-    clearTimeout(window.connTimer);
-    clearInterval(window.connInterval);
-
-    if (s.value === 'server1') {
-      msg.textContent = 'سرور درحال اتصال است...';
-      msg.className = 'message-box msg-green';
-      window.connTimer = setTimeout(() => {
-        msg.textContent = 'اتصال قطع شد';
-        msg.className = 'message-box msg-red';
-      }, 6000);
-
-    } else if (s.value === 'server2') {
-      msg.textContent = 'سرور در حال اتصال است...';
-      msg.className = 'message-box msg-green';
-      let t = 0;
-      window.connInterval = setInterval(() => {
-        t += 1000;
-        if (t >= 100000) {
-          clearInterval(window.connInterval);
-          msg.textContent = 'اتصال قطع شد';
-          msg.className = 'message-box msg-red';
-        }
-      }, 1000);
-
-    } else if (s.value === 'server3') {
-      msg.textContent = 'سرور از دسترس خارج شده است!';
-      msg.className = 'message-box msg-orange';
-    }
+    messageBox.style.display = 'block';
+    messageBox.style.color = '#63e68a';
+    messageBox.textContent = `شما سرور ${selectedServer.value.replace('server', '')} را انتخاب کردید.`;
   });
 
-  // وضعیت سرور
+  // عملکرد اتصال
   function startConnection() {
     const icon = document.getElementById('wifiIcon');
     const title = document.getElementById('statusTitle');
-    const message = document.querySelector('.message-box-2');
+    const message = document.getElementById('message');
 
-    icon.classList.add('connecting-2');
+    icon.classList.add('connecting');
     title.textContent = 'در حال اتصال...';
-    title.className = 'status-connecting-2';
+    title.className = 'status-connecting';
     message.style.display = 'block';
     message.textContent = 'لطفاً منتظر بمانید...';
 
     setTimeout(() => {
-      icon.classList.remove('connecting-2');
+      icon.classList.remove('connecting');
       title.textContent = 'سرور آفلاین است!';
-      title.className = 'status-offline-2';
+      title.className = 'status-offline';
       message.textContent = '⛔ اتصال ممکن نیست. سرور در حال حاضر آفلاین است.';
     }, 3000);
   }
